Correctly align file submit button

--- a/style.css
+++ b/style.css
@@ -14,6 +14,16 @@ body{
     box-shadow: 0 0 11px rgba(33,33,33,.2); 
     background: #ddd;
 }
+#submitFileBtn {
+    position: relative;
+    bottom: 1em;
+    left: 1em;
+}
+/* Source: https://stackoverflow.com/a/4609491/6798201 */
+#submitFileBtn:after{
+    content: "\A";
+    white-space: pre;
+}
 div#tools{
     display: inline-block;
 }
